add user and login routes
